# SoulsTAS

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
build-helpers/: build_debug_linux.sh  build_debug_windows.bat  build_release_linux.sh  build_release_windows.bat
lib/soulstas-patches/: Cargo.toml
lib/soulstas-patches/src/: console.rs  lib.rs  logger.rs
lib/soulstas-patches/src/games/: mod.rs
lib/soulstas-patches/src/games/x64/: armoredcore6.rs  darksouls1remastered.rs  darksouls2sotfs.rs  darksouls3.rs  eldenring.rs  mod.rs  nightreign.rs  sekiro.rs
lib/soulstas-patches/src/games/x86/: darksouls1.rs  darksouls2.rs  mod.rs
lib/soulstas-patches/src/util/: globals.rs  mod.rs  version.rs
src/: main.rs
src/games/: armoredcore6.rs  ds1.rs  ds1r.rs  ds2.rs  ds2sotfs.rs  ds3.rs  eldenring.rs  mod.rs  nightreign.rs  sekiro.rs  shared.rs
src/utils/: actions.rs  input.rs  mem.rs  mod.rs  version.rs
