[package]
name = "soulstas"
version = "0.2.0"
edition = "2021"

[dependencies]
mem-rs = "0.2.0"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
soulmods = { git = "https://github.com/FrankvdStam/SoulSplitter", rev = "2c5bf2a", artifact = "cdylib", target = "target" }