[package]
name = "soulstas"
version = "0.7.0"
edition = "2024"

[dependencies]
mem-rs = "= 0.2.5"
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]