[package]
name = "soulstas-patches"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
mem-rs = "= 0.2.3"
log = "0.4.21"
spin_sleep = "1.3.3"

[target.'cfg(target_arch = "x86_64")'.dependencies.ilhook]
version = "= 2.1.3"

[target.'cfg(target_arch = "x86")'.dependencies.ilhook]
version = "= 2.1.3"
default-features = false
features = [
    "x86"
]

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Performance",
    "Win32_Security",
    "Win32_UI_Input_XboxController",
]